oscar-fzn/src/main/java/oscar/flatzinc/parser/FlatzincParser.java
// Generated from /Users/gustavbjordal/OscaR/oscar/oscar-fzn/src/main/java/oscar/flatzinc/parser/Flatzinc.g4 by ANTLR 4.7
package oscar.flatzinc.parser;

/*******************************************************************************
  * OscaR is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as published by
  * the Free Software Foundation, either version 2.1 of the License, or
  * (at your option) any later version.
  *
  * OscaR is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU Lesser General Public License  for more details.
  *
  * You should have received a copy of the GNU Lesser General Public License along with OscaR.
  * If not, see http://www.gnu.org/licenses/lgpl-3.0.en.html
  ******************************************************************************/
//package oscar.flatzinc.parser;
import oscar.flatzinc.parser.intermediatemodel.*;
import oscar.flatzinc.parser.intermediatemodel.ASTLiterals.*;
import oscar.flatzinc.parser.intermediatemodel.ASTDecls.*;
import oscar.flatzinc.parser.intermediatemodel.ASTTypes.*;
import java.util.ArrayList;
import java.util.HashSet;
import java.util.List;
import java.util.Set;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FlatzincParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		Boolconst=32, PREDANNID=33, VARPARID=34, Floatconst=35, INT=36, STRING=37, 
		WS=38;
	public static final int
		RULE_flatzinc_model = 0, RULE_pred_decl = 1, RULE_pred_param = 2, RULE_param_decl = 3, 
		RULE_func_decl = 4, RULE_let_expr = 5, RULE_let_body = 6, RULE_var_decl = 7, 
		RULE_constraint = 8, RULE_solve_goal = 9, RULE_basic_par_type = 10, RULE_basic_var_type = 11, 
		RULE_par_type = 12, RULE_var_type = 13, RULE_array_type = 14, RULE_par_array_type = 15, 
		RULE_pred_param_type = 16, RULE_basic_pred_param_type = 17, RULE_pred_array_type = 18, 
		RULE_expr = 19, RULE_lit_expr = 20, RULE_const_set = 21, RULE_const_range = 22, 
		RULE_const_float_range = 23, RULE_array_expr = 24, RULE_annotations = 25, 
		RULE_annotation = 26, RULE_pred_ann_id = 27, RULE_bool_const = 28, RULE_float_const = 29, 
		RULE_int_const = 30, RULE_string_constant = 31, RULE_var_par_id = 32;
	public static final String[] ruleNames = {
		"flatzinc_model", "pred_decl", "pred_param", "param_decl", "func_decl", 
		"let_expr", "let_body", "var_decl", "constraint", "solve_goal", "basic_par_type", 
		"basic_var_type", "par_type", "var_type", "array_type", "par_array_type", 
		"pred_param_type", "basic_pred_param_type", "pred_array_type", "expr", 
		"lit_expr", "const_set", "const_range", "const_float_range", "array_expr", 
		"annotations", "annotation", "pred_ann_id", "bool_const", "float_const", 
		"int_const", "string_constant", "var_par_id"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'predicate'", "'('", "','", "')'", "':'", "'='", "'function'", 
		"'ann'", "'let'", "'{'", "'}'", "'in'", "'constraint'", "'solve'", "'satisfy'", 
		"'minimize'", "'maximize'", "'bool'", "'float'", "'int'", "'set'", "'of'", 
		"'var'", "'-infinity..infinity'", "'array'", "'['", "']'", "'..'", "'::'", 
		"'()'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "Boolconst", "PREDANNID", 
		"VARPARID", "Floatconst", "INT", "STRING", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Flatzinc.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		private Model m;
		private ASTModel astM;
		private IDContainer idC;
		public FlatzincParser(TokenStream input,Model m){
			this(input);
			this.m = m;
			this.astM = new ASTModel();
			idC = new IDContainer();
		}

	public FlatzincParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Flatzinc_modelContext extends ParserRuleContext {
		public Param_declContext param_decl;
		public Var_declContext var_decl;
		public ConstraintContext constraint;
		public Solve_goalContext solve_goal;
		public Func_declContext func_decl;
		public List<Pred_declContext> pred_decl() {
			return getRuleContexts(Pred_declContext.class);
		}
		public Pred_declContext pred_decl(int i) {
			return getRuleContext(Pred_declContext.class,i);
		}
		public List<Param_declContext> param_decl() {
			return getRuleContexts(Param_declContext.class);
		}
		public Param_declContext param_decl(int i) {
			return getRuleContext(Param_declContext.class,i);
		}
		public List<Var_declContext> var_decl() {
			return getRuleContexts(Var_declContext.class);
		}
		public Var_declContext var_decl(int i) {
			return getRuleContext(Var_declContext.class,i);
		}
		public List<ConstraintContext> constraint() {
			return getRuleContexts(ConstraintContext.class);
		}
		public ConstraintContext constraint(int i) {
			return getRuleContext(ConstraintContext.class,i);
		}
		public List<Solve_goalContext> solve_goal() {
			return getRuleContexts(Solve_goalContext.class);
		}
		public Solve_goalContext solve_goal(int i) {
			return getRuleContext(Solve_goalContext.class,i);
		}
		public List<Func_declContext> func_decl() {
			return getRuleContexts(Func_declContext.class);
		}
		public Func_declContext func_decl(int i) {
			return getRuleContext(Func_declContext.class,i);
		}
		public Flatzinc_modelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flatzinc_model; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlatzincListener ) ((FlatzincListener)listener).enterFlatzinc_model(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlatzincListener ) ((FlatzincListener)listener).exitFlatzinc_model(this);
		}
	}

	public final Flatzinc_modelContext flatzinc_model() throws RecognitionException {
		Flatzinc_modelContext _localctx = new Flatzinc_modelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_flatzinc_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__7) | (1L << T__13) | (1L << T__14) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__23) | (1L << T__25))) != 0)) {
				{
				setState(87);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(66);
					pred_decl();
					}
					break;
				case 2:
					{
					setState(67);
					((Flatzinc_modelContext)_localctx).param_decl = param_decl();
					setState(68);
					match(T__0);
					astM.addParamDecl(((Flatzinc_modelContext)_localctx).param_decl.d);
					}
					break;
				case 3:
					{
					setState(71);
					((Flatzinc_modelContext)_localctx).var_decl = var_decl();
					setState(72);
					match(T__0);
					astM.addVarDecl(((Flatzinc_modelContext)_localctx).var_decl.d);
					}
					break;
				case 4:
					{
					setState(75);
					((Flatzinc_modelContext)_localctx).constraint = constraint();
					setState(76);
					match(T__0);
					astM.addConstraint(((Flatzinc_modelContext)_localctx).constraint.c);
					}
					break;
				case 5:
					{
					setState(79);
					((Flatzinc_modelContext)_localctx).solve_goal = solve_goal();
					setState(80);
					match(T__0);
					astM.setSolve(((Flatzinc_modelContext)_localctx).solve_goal.s);
					}
					break;
				case 6:
					{
					setState(83);
					((Flatzinc_modelContext)_localctx).func_decl = func_decl();
					setState(84);
					match(T__0);
					astM.addFuncDecl(((Flatzinc_modelContext)_localctx).func_decl.f);
					}
					break;
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			m.buildModel(astM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pred_declContext extends ParserRuleContext {
		public TerminalNode PREDANNID() { return getToken(FlatzincParser.PREDANNID, 0); }
		public List<Pred_paramContext> pred_param() {
			return getRuleContexts(Pred_paramContext.class);
		}
		public Pred_paramContext pred_param(int i) {
			return getRuleContext(Pred_paramContext.class,i);
		}
		public Pred_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pred_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlatzincListener ) ((FlatzincListener)listener).enterPred_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlatzincListener ) ((FlatzincListener)listener).exitPred_decl(this);
		}
	}

	public final Pred_declContext pred_decl() throws RecognitionException {
		Pred_declContext _localctx = new Pred_declContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pred_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__1);
			setState(95);
			match(PREDANNID);
			setState(96);
			match(T__2);
			setState(97);
			pred_param();
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(98);
				match(T__3);
				setState(99);
				pred_param();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			match(T__4);
			setState(106);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pred_paramContext extends ParserRuleContext {
		public Pred_param_typeContext pred_param_type() {
			return getRuleContext(Pred_param_typeContext.class,0);
		}
		public Pred_ann_idContext pred_ann_id() {
			return getRuleContext(Pred_ann_idContext.class,0);
		}
		public Pred_paramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pred_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlatzincListener ) ((FlatzincListener)listener).enterPred_param(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlatzincListener ) ((FlatzincListener)listener).exitPred_param(this);
		}
	}

	public final Pred_paramContext pred_param() throws RecognitionException {
		Pred_paramContext _localctx = new Pred_paramContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pred_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			pred_param_type();
			setState(109);
			match(T__5);
			setState(110);
			pred_ann_id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_declContext extends ParserRuleContext {
		public ASTParamDecl d;
		public Par_typeContext par_type;
		public Var_par_idContext var_par_id;
		public ExprContext expr;
		public Par_typeContext par_type() {
			return getRuleContext(Par_typeContext.class,0);
		}
		public Var_par_idContext var_par_id() {
			return getRuleContext(Var_par_idContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Param_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlatzincListener ) ((FlatzincListener)listener).enterParam_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlatzincListener ) ((FlatzincListener)listener).exitParam_decl(this);
		}
	}

	public final Param_declContext param_decl() throws RecognitionException {
		Param_declContext _localctx = new Param_declContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_param_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			((Param_declContext)_localctx).par_type = par_type();
			setState(113);
			match(T__5);
			setState(114);
			((Param_declContext)_localctx).var_par_id = var_par_id();
			setState(115);
			match(T__6);
			setState(116);
			((Param_declContext)_localctx).expr = expr();
			((Param_declContext)_localctx).d =  new ASTParamDecl(((Param_declContext)_localctx).var_par_id.text, ((Param_declContext)_localctx).par_type.t, ((Param_declContext)_localctx).expr.e);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_declContext extends ParserRuleContext {
		public ASTFuncDecl f;
		public ArrayList<ASTVarDecl> params = new ArrayList<ASTVarDecl>();;
		public Pred_ann_idContext pred_ann_id;
		public Var_declContext var_decl;
		public Let_exprContext let_expr;
		public Pred_ann_idContext pred_ann_id() {
			return getRuleContext(Pred_ann_idContext.class,0);
		}
		public Let_exprContext let_expr() {
			return getRuleContext(Let_exprContext.class,0);
		}
		public List<Var_declContext> var_decl() {
			return getRuleContexts(Var_declContext.class);
		}
		public Var_declContext var_decl(int i) {
			return getRuleContext(Var_declContext.class,i);
		}
		public Func_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlatzincListener ) ((FlatzincListener)listener).enterFunc_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlatzincListener ) ((FlatzincListener)listener).exitFunc_decl(this);
		}
	}

	public final Func_declContext func_decl() throws RecognitionException {
		Func_declContext _localctx = new Func_declContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_func_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(T__7);
			setState(120);
			match(T__8);
			setState(121);
			match(T__5);
			setState(122);
			((Func_declContext)_localctx).pred_ann_id = pred_ann_id();
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(123);
				match(T__2);
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__23 || _la==T__25) {
					{
					setState(124);
					((Func_declContext)_localctx).var_decl = var_decl();
					_localctx.params.add(((Func_declContext)_localctx).var_decl.d);
					setState(132);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__3) {
						{
						{
						setState(126);
						match(T__3);
						setState(127);
						((Func_declContext)_localctx).var_decl = var_decl();
						_localctx.params.add(((Func_declContext)_localctx).var_decl.d);
						}
						}
						setState(134);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(137);
				match(T__4);
				}
			}

			setState(140);
			match(T__6);
			setState(141);
			((Func_declContext)_localctx).let_expr = let_expr();
			((Func_declContext)_localctx).f =  new ASTFuncDecl(((Func_declContext)_localctx).pred_ann_id.text, _localctx.params, ((Func_declContext)_localctx).let_expr.l);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Let_exprContext extends ParserRuleContext {
		public ASTLet l;
		public ArrayList<ASTNode> body;
		public Let_bodyContext let_body;
		public AnnotationContext annotation;
		public AnnotationContext annotation() {
			return getRuleContext(AnnotationContext.class,0);
		}
		public List<Let_bodyContext> let_body() {
			return getRuleContexts(Let_bodyContext.class);
		}
		public Let_bodyContext let_body(int i) {
			return getRuleContext(Let_bodyContext.class,i);
		}
		public Let_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_let_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlatzincListener ) ((FlatzincListener)listener).enterLet_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlatzincListener ) ((FlatzincListener)listener).exitLet_expr(this);
		}
	}

	public final Let_exprContext let_expr() throws RecognitionException {
		Let_exprContext _localctx = new Let_exprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_let_expr);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(T__9);
			setState(145);
			match(T__10);
			((Let_exprContext)_localctx).body =  new ArrayList<ASTNode>();
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__23) | (1L << T__25))) != 0)) {
				{
				setState(147);
				((Let_exprContext)_localctx).let_body = let_body();
				_localctx.body.add(((Let_exprContext)_localctx).let_body.n);
				setState(155);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(149);
						match(T__3);
						setState(150);
						((Let_exprContext)_localctx).let_body = let_body();
						_localctx.body.add(((Let_exprContext)_localctx).let_body.n);
						}
						} 
					}
					setState(157);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				}
			}

			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(160);
				match(T__3);
				}
			}

			setState(163);
			match(T__11);
			setState(164);
			match(T__12);
			setState(165);
			match(T__2);
			setState(166);
			((Let_exprContext)_localctx).annotation = annotation();
			setState(167);
			match(T__4);
			 ((Let_exprContext)_localctx).l =  new ASTLet(_localctx.body, ((Let_exprContext)_localctx).annotation.ann);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Let_bodyContext extends ParserRuleContext {
		public ASTNode n;
		public Var_declContext var_decl;
		public Param_declContext param_decl;
		public ConstraintContext constraint;
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public Param_declContext param_decl() {
			return getRuleContext(Param_declContext.class,0);
		}
		public ConstraintContext constraint() {
			return getRuleContext(ConstraintContext.class,0);
		}
		public Let_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_let_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlatzincListener ) ((FlatzincListener)listener).enterLet_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlatzincListener ) ((FlatzincListener)listener).exitLet_body(this);
		}
	}
